<?xml version="1.0"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="bt_form_pay_with_card_header">Pay With a Card</string>

    <string name="bt_invalid_card">Card information is invalid</string>

    <string name="bt_choose_payment_method">Choose Payment Method</string>
    <string name="bt_change_payment_method">Change Payment Method</string>
    <string name="bt_add_new_payment_method">Add New Payment Method</string>
    <string name="bt_add_payment_method">Add Payment Method</string>
    <string name="bt_change_android_pay_card" tools:ignore="MissingTranslation">Change Android Pay Card</string>

    <string name="bt_default_submit_button_text">PURCHASE</string>
    <string name="bt_default_action_bar_text">Purchase</string>

    <!-- Note: %s is a place holder and should be left in translated strings -->
    <string name="bt_card_descriptor">ends in %s</string>

    <string name="bt_pay_with_paypal">Pay with PayPal</string>
    <string name="bt_pay_with_venmo">Pay with Venmo</string>
    <string name="bt_pay_with_android_pay" tools:ignore="MissingTranslation">Pay with Android Pay</string>

    <string name="bt_descriptor_visa">Visa</string>
    <string name="bt_descriptor_mastercard">MasterCard</string>
    <string name="bt_descriptor_amex">Amex</string>
    <string name="bt_descriptor_jcb">JCB</string>
    <string name="bt_descriptor_discover">Discover</string>
    <string name="bt_descriptor_diners">Diners</string>
    <string name="bt_descriptor_maestro">Maestro</string>
    <string name="bt_descriptor_paypal">PayPal</string>
    <string name="bt_descriptor_pay_with_venmo" tools:ignore="MissingTranslation">Venmo</string>
    <string name="bt_descriptor_android_pay" tools:ignore="MissingTranslation">Android Pay</string>
    <string name="bt_descriptor_unknown">Card</string>
</resources>
