<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        tools:ignore="ContentDescription"
        android:id="@+id/bt_payment_method_icon"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/bt_payment_method_item_padding"
        android:layout_marginStart="@dimen/bt_payment_method_item_padding"
        android:layout_height="@dimen/bt_default_item_height" />

    <TextView
        style="@style/bt_base_textview_bold"
        android:id="@+id/bt_payment_method_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/bt_payment_method_icon"
        android:layout_toEndOf="@id/bt_payment_method_icon"
        android:layout_marginLeft="@dimen/bt_payment_method_item_padding"
        android:layout_marginStart="@dimen/bt_payment_method_item_padding"
        android:textColor="@color/bt_black" />

    <TextView
        style="@style/bt_base_textview"
        android:id="@+id/bt_payment_method_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/bt_payment_method_type"
        android:layout_toEndOf="@id/bt_payment_method_type"
        android:layout_marginLeft="@dimen/bt_payment_method_item_padding"
        android:layout_marginRight="@dimen/bt_payment_method_item_padding"
        android:maxLines="1"
        android:ellipsize="middle"
        android:textColor="@color/bt_black" />

</merge>